# DataScraping

./: README.md
movieRecommender/: pyproject.toml
movieRecommender/dataFiles/: Top_moviesPro.csv  Topmovies.csv
movieRecommender/movierecommender/: DataScrapeTut.ipynb  ScrapeData2.ipynb  Tester.py  dataAnalysis.ipynb  scrapeData.ipynb
