[tool.poetry]
name = "movierecommender"
version = "0.1.0"
description = ""
authors = ["Rajesh <rajeshprofx7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
faker = "^22.0.0"
streamlit = "^1.29.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
